fixed spacing input boxes

--- a/main.css
+++ b/main.css
@@ -1261,9 +1261,8 @@ body{
     /*display: flex;*/
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    width: 30%;
-    margin: 16rem auto;
+    width: 35%;
+    margin: 27vh auto;
     opacity: 0;
     visibility: hidden;
     transition: all 175ms ease-in-out;
@@ -1276,12 +1275,13 @@ body{
     position: relative;
     width: 100%;
     display: block;
+    margin-left: -20px;
 }
 .contact-input-container .row100 .col{
     position: relative;
     width: 100%;
-    padding: 0 10px;
-    margin: 30px 0 0px;
+    padding: 0 15px;
+    margin: 35px 0 0px;
     transition: 0.5s;
 }
 
@@ -1289,7 +1289,7 @@ body{
     position: relative;
     width: 100%;
     height: 40px;
-    color: #A50000;
+    color: #FFF;
 }
 
 .contact-input-container .row100 .inputBox input,
@@ -1303,7 +1303,7 @@ body{
     outline: none;
     font-size: 15px;
     padding: 0 10px;
-    color: #FFF;
+    color: #A50000;
     z-index: 1;
 }
 
@@ -1331,7 +1331,7 @@ body{
     display: block;
     width: 100%;
     height: 2px;
-    background: #A50000;
+    background: #FFF;
     transition: 0.5s;
     pointer-events: none;
 }
